fix layout shift

--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,7 @@
+#app {
+  min-height: 100vh;
+}
+
 #about-section {
   width: 100%;
   background-color: #040404;
